--- a/compute.conf.sample
+++ b/compute.conf.sample
@@ -12,11 +12,12 @@ name=nova
 user=nova
 password=secret
 
-[network_public]# A unique name, must start with network_. If only one network no need to change
-neutron_net_id = XXX-XXX-XXX-XXX # The network ID as known by neutron (UUID)
-nova_name = public # The label of the network as defined in nova
-device = eth1 # The raw device that is attached to the bridge
-bridge = br100 # The name of the bridge that nova uses
+# Blocks must start with network_
+[network_public]
+neutron_net_id = XXX-XXX-XXX-XXX
+nova_name = public
+device = eth1
+bridge = br100
 
 # If you have a second network uncomment and modify accordingly
 #[network_private]
